# gtm-manager-boilerplate

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTENANCE_AUDIT.md  MAINTENANCE_AUDIT_REPORT.md  README.md  SECURITY.md  TODO.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  sonar-project.properties  tsconfig.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  gitleaks.yml  gtm-diff.yml  gtm-sync.yml  node-ci.yml  python-ci.yml  release.yml  secret-scanning.yml  semgrep.yml  sonarcloud.yml
scripts/: bootstrap_ci.sh  export_ga4_tags.sh  list_accounts.sh  sync_all_containers.sh
src/: __init__.py  cli.ts  index.ts
src/config/: auth.ts
src/exporters/: __init__.py  export_ga4_from_gtm.py  export_workspace_snapshot.py  list_gtm_accounts.py
src/iac/: diff.ts  hash.ts  load-config.ts  load-repo-config.ts  normalize.ts  repo-config.ts  snapshot.ts  sync.ts  version-snapshot.ts  workspace-config.ts
src/lib/: gtm-client.ts  logger.ts  retry.ts  sleep.ts
src/managers/: __init__.py  container_manager.py  tag_manager.py  trigger_manager.py  variable_manager.py  workflow_manager.py
src/test/: auth.test.ts  diff.test.ts  iac-integration.test.ts  load-config.test.ts  load-repo-config.test.ts  resolve-account-container.test.ts  retry-soak.test.ts  retry.test.ts  schema-contract.test.ts  schema.test.ts  snapshot.test.ts
src/test/fixtures/: workspace-current.json  workspace-desired.json
src/types/: gtm-schema.ts
src/utils/: __init__.py  auth.py  google_api.py  helpers.py  targets.py
tests/: conftest.py  test_code_quality_workflow_manager.py  test_container_manager.py  test_export_ga4_from_gtm.py  test_helpers.py  test_tag_trigger_manager.py  test_targets.py  test_workflow_diff.py  test_workflow_sync.py
